--- a/src/index.less
+++ b/src/index.less
@@ -3,3 +3,15 @@ body {
     color: red;
   }
 }
+.box {
+  height: 120px;
+  width: 120px;
+  margin: 20px;
+  background: url('../static/image/s.jpg') no-repeat;
+}
+.box3 {
+  height: 400px;
+  width: 100%;
+  margin: 20px;
+  background: url('../static/image/timg.jpg') no-repeat;
+}
